--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
 
 
 
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-3EGT2Q1WEH"></script>
+<script>
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-3EGT2Q1WEH', { 'anonymize_ip': false });
+}
+</script>
+
   </head>
   <body>
     <nav class="navbar navbar-default navbar-fixed-top navbar-custom">
